css styling, spacing fixes

--- a/css/volunteer.css
+++ b/css/volunteer.css
@@ -31,19 +31,23 @@
 }
 
 #volunteerinfo {
-
-  width: 100%;
+  width: 80%;
   background: body-bg;
   font-family: 'Titillium Web', sans-serif;
+  padding-left: 1%;
+  padding-bottom: 1%;
 }
 
 #volunp{
   background-color: white;
   opacity: .8;
-  width: 70%;
+  width: 58%;
   margin: 0 auto;
   margin-top: 0;
   border: 1px solid black;
+  display: inline-block;
+  padding-left: 1%;
+  padding-right: 1%;
 }
 
 #volunp > p {
@@ -79,9 +83,14 @@
 
 #volThank {
   display:none;
+  text-align: center;
+}
+
+#volNamePara {
+  text-transform: uppercase;
 }
 
 #volunteerListing {
+  display: inline-block;
   height: 100vh;
-  float: right;
 }
